--- a/composer.json
+++ b/composer.json
@@ -1,53 +1,47 @@
 {
-    "name": "iexbase/tron-api",
-    "description": "A PHP API for interacting with Tron (Trx)",
+    "name": "ogigunes/tron-api",
+    "description": "A PHP API for interacting with Tron (TRX)",
     "license": "MIT",
-    "type":   "library",
-    "homepage": "https://github.com/iexbase/tron-api",
+    "type": "library",
+    "homepage": "https://github.com/ogigunes/tron-api.git",
     "authors": [
         {
-            "name": "Shamsudin Serderov",
-            "email": "steein.shamsudin@gmail.com"
+            "name": "ogi",
+            "email": "ogingunes@gmail.com"
         }
     ],
     "keywords": [
-        "iexbase",
         "tron-lib",
         "tron-php",
         "tron-api",
         "tron-rest-api"
     ],
-
     "require": {
         "php": ">=8.0",
-        "comely-io/data-types": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
-        "iexbase/web3.php": "^2.0.1",
+        "phpseclib/phpseclib": "~2.0",
+        "web3p/web3.php": "^0.1.6",
         "kornrunner/secp256k1": "^0.2",
         "simplito/elliptic-php": "^1.0",
         "ext-json": "*",
         "ext-bcmath": "*"
     },
-
     "require-dev": {
-        "phpunit/phpunit": "^6.0"
+        "phpunit/phpunit": "^10.0"
     },
     "autoload": {
         "psr-4": {
-            "IEXBase\\TronAPI\\": "src"
+            "OgiGunes\\TronAPI\\": "src"
         }
     },
-
     "autoload-dev": {
         "psr-4": {
-            "IEXBase\\TronAPI\\Test\\": "tests"
+            "OgiGunes\\TronAPI\\Test\\": "tests"
         }
     },
-
     "config": {
         "sort-packages": true
     },
-
     "minimum-stability": "dev",
     "prefer-stable": true
 }
